--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,8 +2,8 @@ name: Deploy GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -11,14 +11,14 @@ permissions:
   id-token: write
 
 concurrency:
-  group: pages
+  group: "pages"
   cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup PNPM
@@ -26,7 +26,7 @@ jobs:
         with:
           version: 9
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -35,40 +35,25 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: Build site
+      - name: Build
         run: pnpm build
 
-      - name: Prepare Pages artifact (_site)
-        run: |
-          set -euxo pipefail
-          rm -rf _site
-          mkdir -p _site
-
-          if [ -d "dist/public" ]; then
-            cp -r dist/public/* _site/
-          elif [ -d "client/dist" ]; then
-            cp -r client/dist/* _site/
-          elif [ -d "dist" ]; then
-            cp -r dist/* _site/
-          else
-            echo "No build output found. Listing folders:"
-            ls -la
-            echo "Searching for dist/public/client/dist:"
-            find . -maxdepth 4 -type d -name dist -o -name public || true
-            exit 1
-          fi
-
-          echo "Final _site content:"
-          ls -la _site
+      # GitHub Pages + SPA: rota direta/refresh dá 404 sem isso
+      - name: SPA fallback (404.html)
+        run: cp dist/public/index.html dist/public/404.html
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: _site
+          path: dist/public
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
