--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,22 +30,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: Build
-        run: pnpm build
+      # Build do Vite (seu projeto está em /client)
+      - name: Build site
+        run: pnpm run build
+        working-directory: client
 
-      # GitHub Pages + SPA: rota direta/refresh dá 404 sem isso
+      # SPA fallback: GitHub Pages devolve 404 em rotas do react-router
       - name: SPA fallback (404.html)
-        run: cp dist/public/index.html dist/public/404.html
+        run: cp dist/index.html dist/404.html
+        working-directory: client
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/public
+          path: client/dist
 
   deploy:
     needs: build
