Fix Pages deploy

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,6 +17,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,7 +25,7 @@ jobs:
       - name: Setup PNPM
         uses: pnpm/action-setup@v3
         with:
-          version: 9
+          version: 10
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -35,14 +36,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      # roda o build do repo (ele já sabe que o Vite root é /client)
-      # e seu vite.config joga saída em dist/public
       - name: Build site
         run: pnpm run build
 
-      # SPA fallback (React Router etc.)
+      # SPA fallback (evita 404 quando atualizar página / entrar por rota)
       - name: SPA fallback (404.html)
-        run: cp dist/public/index.html dist/public/404.html
+        run: |
+          test -f dist/public/index.html
+          cp dist/public/index.html dist/public/404.html
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -55,6 +56,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
