--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -39,16 +39,14 @@ jobs:
       - name: Build site
         run: pnpm run build
 
-      # SPA fallback (evita 404 quando atualizar página / entrar por rota)
+      # SPA fallback (evita 404 ao dar refresh em rota)
       - name: SPA fallback (404.html)
-        run: |
-          test -f dist/public/index.html
-          cp dist/public/index.html dist/public/404.html
+        run: cp dist/index.html dist/404.html
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/public
+          path: dist
 
   deploy:
     needs: build
